# Oris

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  RELEASE.md  RELEASE_v0.1.0.md  RELEASE_v0.1.2.md  RELEASE_v0.1.3.md  RELEASE_v0.10.0.md  RELEASE_v0.11.0.md  RELEASE_v0.12.0.md  RELEASE_v0.13.0-evokernel.md  RELEASE_v0.13.0.md  RELEASE_v0.13.1.md  RELEASE_v0.13.2.md  RELEASE_v0.13.3.md  RELEASE_v0.14.0.md  RELEASE_v0.15.0.md  RELEASE_v0.16.0.md  RELEASE_v0.17.0.md  RELEASE_v0.17.1.md  RELEASE_v0.18.0.md  RELEASE_v0.18.1.md  RELEASE_v0.19.0.md  RELEASE_v0.2.0-oris-intake.md  RELEASE_v0.20.0.md  RELEASE_v0.21.0.md  RELEASE_v0.22.0.md  RELEASE_v0.22.1.md  RELEASE_v0.23.0.md  RELEASE_v0.24.0.md  RELEASE_v0.25.0.md  RELEASE_v0.26.0.md  RELEASE_v0.27.0.md  RELEASE_v0.28.0.md  RELEASE_v0.29.0.md  (+52 more)
crates/evolution-cli/: Cargo.toml
crates/evolution-cli/src/: main.rs
crates/oris-economics/: Cargo.toml
crates/oris-economics/src/: lib.rs
crates/oris-economics/tests/: integration_test.rs
crates/oris-evo-ipc-protocol/: Cargo.toml
crates/oris-evo-ipc-protocol/src/: lib.rs  request.rs  response.rs  types.rs
crates/oris-evo-ipc-protocol/tests/: ipc_protocol_test.rs
crates/oris-evo-server/: Cargo.toml
crates/oris-evo-server/src/: error.rs  handlers.rs  lib.rs  pipeline.rs  server.rs
crates/oris-evo-server/tests/: server_test.rs
crates/oris-evokernel/: Cargo.toml
crates/oris-evokernel/src/: adapters.rs  confidence_daemon.rs  core.rs  lib.rs  metrics.rs  pipeline_integration.rs  signal_extractor.rs
crates/oris-evokernel/tests/: evolution_feature_wiring.rs  evolution_lifecycle_regression.rs
crates/oris-evolution/: Cargo.toml
crates/oris-evolution-network/: Cargo.toml
crates/oris-evolution-network/src/: gossip.rs  lib.rs  publisher.rs  rate_limiter.rs  signing.rs  sync.rs
crates/oris-evolution-network/tests/: integration_test.rs
crates/oris-evolution/src/: approval.rs  confidence.rs  core.rs  evolver.rs  gep.rs  lib.rs  pipeline.rs  port.rs  semantic_match.rs  task_class.rs
crates/oris-evolution/tests/: otel_spans_test.rs  pipeline_integration.rs
crates/oris-execution-server/: Cargo.toml
crates/oris-execution-server/src/: lib.rs
crates/oris-execution-server/tests/: smoke_test.rs
crates/oris-exp-repo-cli/: Cargo.toml
crates/oris-exp-repo-cli/src/: main.rs
crates/oris-experience-repo/: Cargo.toml
crates/oris-experience-repo/docs/: openapi.yaml
crates/oris-experience-repo/examples/: server.rs
crates/oris-experience-repo/src/: error.rs  lib.rs
crates/oris-experience-repo/tests/: ed25519_verification_test.rs
crates/oris-genestore/: Cargo.toml
crates/oris-genestore/src/: lib.rs  migrate.rs  replay_hook.rs  store.rs  types.rs
crates/oris-genestore/tests/: integration_test.rs
crates/oris-governor/: Cargo.toml
crates/oris-governor/src/: lib.rs
crates/oris-governor/tests/: evolution_governor_regression.rs
crates/oris-hub/: Cargo.toml
crates/oris-hub-client/: Cargo.toml
crates/oris-hub-client/src/: client.rs  error.rs  lib.rs
crates/oris-hub/src/: error.rs  lib.rs  main.rs  server.rs  validation.rs
crates/oris-hub/tests/: dashboard_test.rs  discovery_test.rs  e2e_hub_test.rs  federation_test.rs  registry_test.rs  subscription_test.rs
crates/oris-intake/: Cargo.toml
crates/oris-intake/src/: admission.rs  ci_parser.rs  continuous.rs  evidence.rs  hermesx.rs  lib.rs  mutation.rs  planning.rs  prioritize.rs  proposal.rs  rules.rs  server.rs  signal.rs  source.rs
crates/oris-intake/tests/: dedup_priority_test.rs  webhook_integration.rs
crates/oris-mutation-evaluator/: Cargo.toml
crates/oris-mutation-evaluator/src/: critic.rs  evaluator.rs  lib.rs  mutation_backend.rs  static_analysis.rs  types.rs
crates/oris-mutation-evaluator/tests/: llm_pipeline.rs
crates/oris-orchestrator/: Cargo.toml
crates/oris-orchestrator/examples/: http_closed_loop.rs
crates/oris-orchestrator/src/: acceptance_gate.rs  autonomous_loop.rs  autonomous_release.rs  coordinator.rs  evidence.rs  github_adapter.rs  github_delivery.rs  issue_selection.rs  lib.rs  loop_adapters.rs  pipeline_orchestrator.rs  proposal_generator.rs  publish_gate.rs  release_executor.rs  release_gate.rs  runtime_client.rs  state.rs  task_planner.rs  task_spec.rs
crates/oris-orchestrator/tests/: autonomous_release_gate.rs  coordinator_flow.rs  evidence_gate.rs  github_adapter_http.rs  github_adapter_payload.rs  issue_selection.rs  pipeline_orchestrator_integration.rs  release_gate.rs  runtime_client_contract.rs  state_machine.rs  task_spec_validation.rs
crates/oris-runtime/: Cargo.toml
crates/oris-runtime/examples/: README_agent_self_evolution_zh.md  a2a_travel_experience_share.rs  agent_official_experience_reuse.rs  agent_self_evolution.rs  agent_self_evolution_travel_network.rs  cli_durable_job.rs  durable_agent_job_sqlite.rs  execution_server.rs  generate_runtime_api_contract.rs  kernel_runner_async.rs  kernel_runner_sync.rs  rag_hybrid.rs  runtime_benchmark_suite.rs
crates/oris-runtime/src/: agent_contract.rs  economics.rs  evolution_network.rs  governor.rs  lib.rs  plugins.rs  spec_contract.rs
crates/oris-runtime/tests/: README.md  agent_official_experience_reuse.rs  agent_self_evolution_travel_network.rs  architecture.rs  economics_feature_wiring.rs  evolution_feature_wiring.rs  spec_contract_feature_wiring.rs
crates/oris-sandbox/: Cargo.toml
crates/oris-sandbox/src/: core.rs  lib.rs  resource_limits.rs
crates/oris-sandbox/tests/: evolution_sandbox_regression.rs
crates/oris-spec/: Cargo.toml
crates/oris-spec/src/: lib.rs
examples/evo_oris_repo/: Cargo.toml  README.md
examples/evo_oris_repo/src/: benchmark.rs  lib.rs  main.rs  visualization.rs
examples/evo_oris_repo/tests/: self_evolution_demo_test.rs
examples/plugin_reference/: Cargo.toml  README.md
examples/plugin_reference/src/: lib.rs
sdks/python/: pyproject.toml
sdks/python/tests/: test_evolution.py  test_execution.py  test_experience.py  test_hub.py  test_langchain_adapter.py  test_mysql_store.py  test_signing.py  test_store.py  (+1 more)
(+639 files in other folders)
