[workspace]
resolver = "2"
members = [
    "crates/oris-execution-server",
    "crates/oris-execution-runtime",
    "crates/oris-kernel",
    "crates/oris-evolution",
    "crates/oris-sandbox",
    "crates/oris-evokernel",
    "crates/oris-governor",
    "crates/oris-evolution-network",
    "crates/oris-economics",
    "crates/oris-spec",
    "crates/oris-agent-contract",
    "crates/oris-runtime",
    "crates/oris-orchestrator",
    "crates/oris-intake",
    "crates/oris-mutation-evaluator",
    "crates/oris-genestore",
    "crates/oris-evo-ipc-protocol",
    "crates/oris-evo-server",
    "crates/oris-experience-repo",
    "crates/oris-exp-repo-cli",
    "crates/evolution-cli",
    "examples/evo_oris_repo",
    "examples/vector_store_surrealdb",
    "examples/oris_starter_axum",
    "examples/oris_worker_tokio",
    "examples/oris_operator_cli",
    "examples/plugin_reference",
]
