[package]
name = "evolution-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Oris Evolution Gene Pool"
license = "MIT"
repository = "https://github.com/Colin4k1024/Oris"
keywords = ["oris", "evolution", "gene-pool", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Oris Team"]

[[bin]]
name = "evolution-cli"
path = "src/main.rs"

[dependencies]
# IPC Protocol
oris-evo-ipc-protocol = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
