[package]
name = "oris-economics"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
publish = ["crates-io"]
license = "MIT"
description = "Local EVU ledger and reputation accounting for Oris evolution."

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
