[package]
name = "oris-evo-ipc-protocol"
version = "0.1.0"
edition = "2021"
description = "IPC protocol definitions for Oris Evolution integration"
license = "MIT"
repository = "https://github.com/Colin4k1024/Oris"
authors = ["Oris Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
