[package]
name = "oris-evo-server"
version = "0.1.0"
edition = "2021"
description = "Oris Evolution Server - IPC server for Claude Code integration"
license = "MIT"
repository = "https://github.com/Colin4k1024/Oris"
authors = ["Oris Team"]

[dependencies]
# IPC Protocol
oris-evo-ipc-protocol = { path = "../oris-evo-ipc-protocol" }

# Oris Evolution crates
oris-evolution = { path = "../oris-evolution" }
oris-evokernel = { path = "../oris-evokernel" }
oris-mutation-evaluator = { path = "../oris-mutation-evaluator" }
oris-genestore = { path = "../oris-genestore" }
oris-sandbox = { path = "../oris-sandbox" }
oris-evolution-network = { path = "../oris-evolution-network" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
