[package]
name = "oris-evokernel"
version = "0.12.3"
edition = "2021"
rust-version = "1.80"
publish = ["crates-io"]
license = "MIT"
description = "Self-evolving kernel orchestration for Oris."

[dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
chrono = { version = "0.4", default-features = true }
oris-agent-contract = { version = "0.5.2", path = "../oris-agent-contract" }
oris-economics = { version = "0.2.0", path = "../oris-economics" }
oris-evolution = { version = "0.3.4", path = "../oris-evolution" }
oris-mutation-evaluator = { version = "0.2.1", path = "../oris-mutation-evaluator" }
oris-evolution-network = { version = "0.4.0", path = "../oris-evolution-network" }
oris-genestore = { version = "0.2.0", path = "../oris-genestore" }
oris-governor = { version = "0.3.0", path = "../oris-governor" }
oris-kernel = { version = "0.2.12", path = "../oris-kernel" }
oris-sandbox = { version = "0.2.0", path = "../oris-sandbox" }
oris-spec = { version = "0.2.0", path = "../oris-spec" }
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
