[package]
name = "oris-evolution-network"
version = "0.4.3"
edition = "2021"
rust-version = "1.80"
publish = ["crates-io"]
license = "MIT"
description = "Protocol types for the Oris Evolution Network."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
oris-evolution = { version = "0.4.1", path = "../oris-evolution" }
rmp-serde = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt", "time"] }

[features]
default = []
gossip-dns = []
gossip-msgpack = ["dep:rmp-serde"]
