[package]
name = "oris-experience-repo"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for Oris Experience Repository"
license = "MIT OR Apache-2.0"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async trait
async-trait = "0.1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# Gene store (SQLite-based)
oris-genestore = { path = "../oris-genestore" }

# Evolution types
oris-evolution = { path = "../oris-evolution" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
