[package]
name = "oris-experience-repo"
version = "0.2.0"
edition = "2021"
description = "HTTP API server for Oris Experience Repository"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Colin4k1024/Oris"
documentation = "https://docs.rs/oris-experience-repo"
homepage = "https://github.com/Colin4k1024/Oris"
keywords = ["oris", "experience-repo", "gene", "capsule", "evolution"]

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async trait
async-trait = "0.1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# Cryptography
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = "2"

# Gene store (SQLite-based)
# Note: oris-genestore must be published to crates.io first (currently v0.2.0)
oris-genestore = "0.2"

# Evolution types
# Note: oris-evolution must be published to crates.io first (currently v0.4.1)
oris-evolution = "0.4"

# Evolution Network (for signing)
oris-evolution-network = "0.5"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Rate limiting
governor = "0.7"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
getrandom = "0.2"
