[package]
name = "oris-genestore"
version = "0.2.0"
edition = "2021"
description = "SQLite-based Gene and Capsule storage for Oris Evolution"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
tempfile = "3"

[features]
default = []
