[package]
name = "oris-governor"
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
publish = ["crates-io"]
license = "MIT"
description = "Promotion, cooldown, and revocation policies for Oris EvoKernel."

[dependencies]
oris-evolution = { version = "0.2.0", path = "../oris-evolution" }
serde = { version = "1.0", features = ["derive"] }
