[package]
name = "oris-hub-client"
version = "0.1.0"
edition = "2021"
description = "Client SDK for Oris Experience Repository Hub"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Colin4k1024/Oris"
keywords = ["oris", "hub", "client", "discovery"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Async
async-trait = "0.1"

# Tracing
tracing = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography (Ed25519 signing)
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"

# Workspace sibling (shared types)
oris-hub = { path = "../oris-hub" }

[dev-dependencies]
tokio-test = "0.4"
