[package]
name = "oris-intake"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
publish = ["crates-io"]
license = "MIT"
description = "Automatic issue intake system for Oris self-evolution."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
oris-agent-contract = { version = "0.5.5", path = "../oris-agent-contract" }
oris-evolution = { version = "0.3.2", path = "../oris-evolution" }
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.7", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tower = { version = "0.5", features = ["util"] }

[features]
default = []
webhook = ["axum", "hmac", "sha2", "hex"]
