[package]
name = "oris-mutation-evaluator"
version = "0.1.0"
edition = "2021"
description = "Mutation quality evaluator with static analysis and LLM critic"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }

[features]
default = []
