[package]
name = "oris-orchestrator"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Oris orchestration contracts and control flow primitives."

[dependencies]
async-trait = "0.1"
oris-agent-contract = { version = "0.3.0", path = "../oris-agent-contract" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1.0"
