[package]
name = "oris-orchestrator"
version = "0.3.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Oris orchestration contracts and control flow primitives."

[dependencies]
async-trait = "0.1"
oris-agent-contract = { version = "0.5.0", path = "../oris-agent-contract" }
oris-evolution = { version = "0.3.4", path = "../oris-evolution" }
oris-intake = { version = "0.2.0", path = "../oris-intake" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1.0"
