[package]
name = "evo_oris_repo"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "evo_oris_repo"

[dependencies]
oris-runtime = { path = "../../crates/oris-runtime", features = ["full-evolution-experimental", "ollama"] }
oris-evolution = { path = "../../crates/oris-evolution" }
oris-genestore = { path = "../../crates/oris-genestore" }
oris-evokernel = { path = "../../crates/oris-evokernel" }
oris-intake = { path = "../../crates/oris-intake", features = ["webhook"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.5.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "intake_webhook_demo"
path = "src/bin/intake_webhook_demo.rs"

[[bin]]
name = "confidence_lifecycle_demo"
path = "src/bin/confidence_lifecycle_demo.rs"

[[bin]]
name = "network_exchange"
path = "src/bin/network_exchange.rs"
