[package]
name = "plugin_reference"
version = "0.1.0"
edition = "2021"
publish = false
description = "Reference layout for an external Oris graph node plugin (0.1.x)"

[dependencies]
oris-runtime = { path = "../../crates/oris-runtime", default-features = false, features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
